# mrgcn

./: '  .gitignore  MANIFEST.in  README.md  mkdataset.py  mkpickle.py  mrgcn.py  pyproject.toml  setup.py  switch_keras_backend.py  switch_keras_backend.sh
configs/: aifb.toml  am.toml  fb15k-237.toml  ml100k+.toml  mutag.toml  template.toml
data/: utils.py
data/io/: knowledge_graph.py  tarball.py  tsv.py
data/readers/: knowledge_graph.py  tar.py
data/samplers/: by_class_sampler.py  dummy.py  utils.py
data/writers/: tar.py
embeddings/: graph_features.py  graph_structure.py
embeddings/xsd/: gYear.py  string.py
if/: aifb.toml  aifb_dummy.toml  aifb_s.toml  aifb_syn.toml  aifb_template.toml  aifb_y.toml  am.toml  bgs.toml  dmg.toml  dmg_i.toml  dmg_n.toml  dmg_s.toml  dmg_y.toml  dummy.toml  fb15k-237.toml  fb15k.toml  ml100k+.toml  mutag.toml  synth.toml  template.toml  toml.tar  wn18rr.toml  yago3-10+.toml
layers/: graph.py  input_adj.py
mrgcn/: mkdataset.py  run.py
mrgcn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mrgcn/data/: batch.py  utils.py
mrgcn/embeddings/: graph_features.py
mrgcn/encodings/: graph_features.py  graph_structure.py
mrgcn/layers/: graph.py
mrgcn/models/: charcnn.py  fully_connected.py  geomcnn.py  imagecnn.py  mobilenets.py  mrgcn.py  perceptron.py  rgcn.py  rnn.py  temporal_cnn.py  transformer.py  utils.py
mrgcn/tasks/: config.py  link_prediction.py  node_classification.py  utils.py
of/: AIFB1537178277.tar
src/layers/: graph.py  input_adj.py
tasks/: node_classification.py  utils.py
(+29 files in other folders)
